# FlaskTemplate

./: .gitignore  README.md  manager.py  pyproject.toml  settings.dev.yaml  settings.local.yaml
src/: __init__.py
src/apps/hello/: controllers.py  models.py  schema.py  services.py
src/common/: api.py  app.py  cache.py  schema.py
src/common/db/: models.py  sqlalchemy.py
src/common/http/: rc.py  response.py
src/conf/: settings.py
src/core/: auth.py  validators.py
src/middlewares/: handlers.py
src/utils/: tools.py
